[package]
name = "fastest_fourier_transform"
version = "0.1.0"
authors = ["シュレック倉田 <32031454+ryuseikurata@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = ">=0.0.0"
num-complex = ">=0.3.0"
